feat: add analysis_skipped status for unsampled parts
- Add STATUS_ANALYSIS_SKIPPED constant
- Set unsampled parts to analysis_skipped status after sampling
- Fix List.of() compatibility issue